base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/component: keycloak
  type: ClusterIP
