base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.example.local
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.example.local
      secretName: keycloak-tls
